# docline

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.ps1  start.sh
.autoharness/: backlog-registry.yaml  config.yaml  harness-manifest.yaml  workspace-profile.yaml
.backlogit/: config.yaml  header-def.yaml  hooks.yaml  memories.json  migration.yaml  registry.yaml  stash.jsonl
.backlogit/archive/: 001-DL.md  001-F.md  001-S.md  001.001-T.md  001.002-T.md  001.003-T.md  001.004-T.md  002-DL.md  002-F.md  002-S.md  002.001-T.md  002.002-T.md  002.003-T.md  002.004-T.md  002.005-T.md  002.006-T.md  002.007-T.md  002.008-T.md  002.009-T.md  002.010-T.md  003-F.md  003-S.md  003.001-T.md  003.002-T.md  003.003-T.md  003.004-T.md  003.005-T.md  003.006-T.md  003.007-T.md  003.008-T.md  003.009-T.md  003.010-T.md  004-F.md  004-S.md  004.001-T.md  004.002-T.md  004.003-T.md  004.004-T.md  004.005-T.md  004.006-T.md  (+315 more)
.backlogit/queue/: 001-DL.md  001-F.md  001-S.md  001.001-T.md  001.002-T.md  001.003-T.md  001.004-T.md  002-DL.md  002-F.md  002-S.md  002.001-T.md  002.002-T.md  002.003-T.md  002.004-T.md  002.005-T.md  002.006-T.md  002.007-T.md  002.008-T.md  002.009-T.md  002.010-T.md  003-F.md  003-S.md  003.001-T.md  003.002-T.md  003.003-T.md  003.004-T.md  003.005-T.md  003.006-T.md  003.007-T.md  003.008-T.md  003.009-T.md  003.010-T.md  004-F.md  004-S.md  004.001-T.md  004.002-T.md  004.003-T.md  004.004-T.md  004.005-T.md  004.006-T.md  (+298 more)
.backlogit/reconcile/: 001-S-post-20260530-201355.md  001-S-pre-20260530-201336.md  002-S-post-20260531-025711.md  002-S-pre-20260531-025650.md  006-S-post-20260601-135622.md  006-S-pre-20260601-135600.md
.backlogit/templates/: deliberation.md  feature.md  review.md  shipment.md  subtask.md  task.md
.claude/: instructions.md
.copilot/: command-history-state.json  config.json  settings.json
.cursor/: mcp.json
.engram/: .workspace-id  config.toml  registry.yaml
.github/: copilot-instructions.md
.github/agents/: _orchestrator.agent.md  _ship.agent.md  _stage.agent.md  orchestrator.agent.md  ship.agent.md  stage.agent.md
docs/: RELEASING.md
scripts/: acquire_lock.ps1  acquire_lock.sh  load_test.py  pa3_triage_cosmos.py  pre-commit-markdownlint.ps1  pre-commit-markdownlint.sh  release_lock.ps1  release_lock.sh  search.ps1  search.sh  spike_h1_corpus_analysis.py
tests/: test_backlog_persistence_contract.py  test_ci_workflow_lint.py  test_cli_fetch.py  test_cli_ingest.py  test_cli_process.py  test_cli_verbosity.py  test_compare_merge_gap.py  test_execute_fetch.py  test_execute_process_progress.py  test_graphtor_ingestion_contract.py  test_graphtor_real_binary_integration.py  test_markitdown_dependency.py  test_ocr_memory_calibration.py  test_pa3_script_flags.py  test_pdf_mode_flag.py  test_posixify_path.py  test_progress.py  test_router.py  test_seam_lint.py
(+527 files in other folders)
