[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docline"
version = "0.1.0"
description = "Document ingestion and normalization pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "SoftwareSalt" },
]
urls = { Homepage = "https://github.com/softwaresalt/docline", Repository = "https://github.com/softwaresalt/docline" }
dependencies = [
    "markdown-it-py>=4,<5",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
]

[project.scripts]
docline = "docline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks end-to-end integration coverage",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
