[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docline"
version = "0.1.0"
description = "Document ingestion and normalization pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "SoftwareSalt" },
]
urls = { Homepage = "https://github.com/softwaresalt/docline", Repository = "https://github.com/softwaresalt/docline" }
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "defusedxml>=0.7,<1",
    "markdown-it-py>=4,<5",
    "pydantic>=2,<3",
    "pypdf>=4,<6",
    "PyYAML>=6,<7",
]

[dependency-groups]
dev = [
    "ruff>=0.15,<1",
    "pyright>=1.1.400,<2",
    "pytest>=9,<10",
    "build>=1.4,<2",
]

[project.scripts]
docline = "docline.cli:main"

[project.optional-dependencies]
pdf = ["docling>=2,<3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks end-to-end integration coverage",
    "graphtor_integration: opt-in integration test that round-trips docline output through a graphtor-docs ingestion simulator",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
